# fastZ

./: .gitignore  LICENSE  README.md  setup.cfg
examples/: iss1.py  subscripting.py
fastz/: __init__.py  core.py  plotting.py
jupyter/: README.ipynb
tests/: test_core.py
