[metadata]
name = fastz
version = 0.0.1
author = Wesley Hileman
author_email = whileman133@gmail.com
description = Lumped-element impedance calculation and frequency-domain plotting.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whileman133/fastz
project_urls =
    Bug Tracker = https://github.com/whileman133/fastz/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    matplotlib